# space-acres

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
Space-Acres.app/Contents/: Info.plist
Space-Acres.app/Contents/Resources/: AppIcon.icns
docs/: INSTALLATION.md
metadata/: subspace_metadata.scale
res/: app.css
res/linux/: space-acres-autostart.desktop  space-acres.desktop  xyz.autonomys.space_acres.desktop
res/macos/: Entitlements.plist  Info.plist  StepToCreateDmg.md  create-app-bundle.sh  run-space-acres.sh  space-acres.icns  space-acres.sh  spec-aarch64-apple-darwin.json
res/translations/: README.md
res/translations/de/: messages.ftl
res/translations/de-DE/: messages.ftl
res/translations/en/: messages.ftl
res/translations/es/: messages.ftl
res/translations/fr/: messages.ftl
res/translations/rs/: messages.ftl
res/translations/ru/: messages.ftl
res/translations/ru-RU/: messages.ftl
res/translations/sr-Latn-RS/: messages.ftl
res/translations/tr/: messages.ftl
res/translations/uk-UA/: messages.ftl
res/translations/zh/: messages.ftl
res/translations/zh-CN/: messages.ftl
res/windows/wix/: RemoveConfigsAndLogs.bat  bundle.wxs  cleanup.bat  space-acres.wxs
scripts/: HowScriptWork.md  create-app-bundle.sh  spec-aarch64-apple-darwin.json  spec.json
src/: backend.rs  frontend.rs  main.rs  shortcut.rs
src/backend/: config.rs  farmer.rs  networking.rs  node.rs  utils.rs
src/backend/farmer/: direct_node_client.rs  maybe_node_client.rs
src/backend/node/: utils.rs
src/frontend/: circular_progress_bar.rs  configuration.rs  loading.rs  migration.rs  new_version.rs  progress_bar.rs  running.rs  translations.rs  tray_icon.rs  utils.rs  widgets.rs
src/frontend/configuration/: farm.rs  node_migration.rs  utils.rs
src/frontend/running/: dashboard.rs  farm.rs  node.rs
src/frontend/tray_icon/: unix.rs  windows_macos.rs
src/frontend/widgets/: progress_bar.rs  progress_circle.rs
wix/: space-acres.wxs
