[package]
name = "space-acres"
description = "Space Acres is an opinionated GUI application for farming on Subspace Network"
license = "0BSD"
version = "0.1.21"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
repository = "https://github.com/subspace/space-acres"
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.deb]
section = "net"
assets = [
    ["res/linux/space-acres-autostart.desktop", "/etc/xdg/autostart/space-acres.desktop", "644"],
    ["target/release/space-acres", "/usr/bin/space-acres", "755"],
    ["res/linux/space-acres.desktop", "/usr/share/applications/space-acres.desktop", "644"],
    ["res/linux/space-acres.png", "/usr/share/pixmaps/space-acres.png", "644"],
]

[package.metadata.deb.variants.modern]
name = "space-acres"
merge-assets.append = [
    ["target/release/space-acres-modern", "/usr/bin/space-acres-modern", "755"],
]

# TODO: Menu shortcut will not be generated automatically in case of re-init: https://github.com/volks73/cargo-wix/issues/141
[package.metadata.wix]
# Custom location to keep the root of the project cleaner
include = ["res/windows/wix/space-acres.wxs"]
product-icon = "res/windows/space-acres.ico"
# TODO: This option will not have effect until https://github.com/volks73/cargo-wix/issues/270 is fixed in case of re-init
product-name = "Space Acres"

[dependencies]
anyhow = "1.0.83"
arc-swap = "1.7.1"
async-lock = "3.3.0"
async-oneshot = "0.5.9"
async-trait = "0.1.80"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
betrayer = { version = "0.2.0" }
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
dark-light = "1.1.1"
dirs = "5.0.1"
duct = "0.13.7"
event-listener-primitives = "2.0.1"
file-rotate = "0.7.5"
frame-system = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
fs4 = "0.8.3"
futures = "0.3.30"
futures-timer = "3.0.3"
gtk = { version = "0.7.3", package = "gtk4" }
hex = "0.4.3"
image = { version = "0.25.1", default-features = false, features = ["png"] }
indoc = "2.0.5"
# Substrate uses old version of libp2p
libp2p-identity-substate = { version = "0.1.3", package = "libp2p-identity" }
mimalloc = "0.1.41"
names = "0.14.0"
open = "5.1.2"
pallet-balances = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
parity-scale-codec = "3.6.12"
parking_lot = "0.12.2"
relm4 = "0.7.0-rc.1"
relm4-components = { version = "0.7.0-rc.1", default-features = false }
relm4-icons = { version = "0.7.0-alpha.2", features = ["checkmark", "cross", "grid-filled", "menu-large", "pause", "processor", "puzzle-piece", "size-horizontally", "ssd", "wallet2", "warning"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-client-db = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
sc-informant = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-network = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-service = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-storage-monitor = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sc-subspace-chain-specs = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
sc-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
schnellru = "0.2.3"
semver = "1.0.23"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
simple_moving_average = "1.0.2"
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sp-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sp-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sp-domains-fraud-proof = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
sp-objects = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
subspace-archiving = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-erasure-coding = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-fake-runtime-api = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14", default-features = false }
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-proof-of-space = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
subspace-service = { git = "https://github.com/subspace/subspace", rev = "b27d113cc7805a3ab106bac299c2bfb23207ec14" }
supports-color = "3.0.0"
thiserror = "1.0.60"
thread-priority = "1.1.0"
tokio = { version = "1.37.0", features = ["fs", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(windows)'.dependencies]
native-dialog = "0.7.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["numa"]
numa = [
    "subspace-farmer/numa"
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
parking_lot = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-erasure-coding = { opt-level = 3 }
subspace-farmer-components = { opt-level = 3 }
subspace-proof-of-space = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"

[patch."https://github.com/paritytech/polkadot-sdk.git"]
# TODO: https://github.com/paritytech/arkworks-substrate depends on Substrate's git commit and requires override
sp-crypto-ec-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee" }
