[package]
name = "space-acres"
description = "Space Acres is an opinionated GUI application for farming on Autonomys Network"
license = "0BSD"
version = "0.2.8"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
repository = "https://github.com/autonomys/space-acres"
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.deb]
section = "net"
assets = [
    ["res/linux/space-acres-autostart.desktop", "/etc/xdg/autostart/xyz.autonomys.space_acres.desktop", "644"],
    ["target/release/space-acres", "/usr/bin/space-acres", "755"],
    # Name must match application ID or else it has a strange behavior
    ["res/linux/xyz.autonomys.space_acres.desktop", "/usr/share/applications/xyz.autonomys.space_acres.desktop", "644"],
    ["res/linux/space-acres.png", "/usr/share/icons/hicolor/256x256/apps/space-acres.png", "644"],
]

[package.metadata.deb.variants.modern]
name = "space-acres"
merge-assets.append = [
    ["target/release/space-acres-modern", "/usr/bin/space-acres-modern", "755"],
]

[package.metadata.winres]
ProductName = "Space Acres"

[package.metadata.wix]
# Custom location to keep the root of the project cleaner
include = ["res/windows/wix/space-acres.wxs"]

[dependencies]
anyhow = "1.0.91"
arc-swap = "1.7.1"
async-lock = "3.4.0"
async-oneshot = "0.5.9"
async-trait = "0.1.83"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
bytesize = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }
dark-light = "1.1.1"
dirs = "5.0.1"
duct = "0.13.7"
event-listener-primitives = "2.0.1"
fdlimit = "0.3.0"
file-rotate = "0.7.6"
fluent-langneg = "0.14.1"
fluent-static = "0.4.0"
frame-system = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
fs4 = "0.10.0"
futures = "0.3.31"
futures-timer = "3.0.3"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_14"] }
hex = "0.4.3"
image = { version = "0.25.4", default-features = false, features = ["png"] }
mimalloc = "0.1.43"
names = "0.14.0"
notify-rust = { version = "4.11.3", features = ["images"] }
open = "5.3.0"
pallet-balances = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
parity-scale-codec = "3.6.12"
parking_lot = "0.12.3"
relm4 = "0.9.1"
relm4-components = { version = "0.9.1", default-features = false }
relm4-icons = "0.10.0-beta.2"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-client-db = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
sc-network = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-network-types = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-service = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-storage-monitor = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sc-subspace-chain-specs = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
sc-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
schnellru = "0.2.3"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simple_moving_average = "1.0.2"
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sp-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sp-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
sp-objects = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305", default-features = false }
subspace-archiving = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-erasure-coding = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-fake-runtime-api = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c", default-features = false }
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-kzg = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-proof-of-space = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-proof-of-space-gpu = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c", optional = true }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
subspace-service = { git = "https://github.com/subspace/subspace", rev = "bdf31b82954f267b7e2815a0e833f45d7d41021c" }
supports-color = "3.0.1"
sys-locale = "0.3.1"
tempfile = "3.13.0"
thiserror = "2.0.1"
thread-priority = "1.1.0"
tokio = { version = "1.41.0", features = ["fs", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracker = "0.2.2"

[target.'cfg(windows)'.dependencies]
native-dialog = "0.7.0"
tracing-panic = "0.1.2"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = "0.19.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
ksni = "0.2.2"

[build-dependencies]
fluent-static-codegen = "0.5.0"
relm4-icons-build = "0.10.0-beta.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["numa"]
numa = [
    "subspace-farmer/numa"
]
cuda = [
    "_gpu",
    "subspace-farmer/cuda",
    "subspace-proof-of-space-gpu/cuda",
]
rocm = [
    "_gpu",
    "subspace-farmer/rocm",
    "subspace-proof-of-space-gpu/rocm",
]
_gpu = []

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
bitvec = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake3 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
blst = { opt-level = 3 }
rust-kzg-blst = { opt-level = 3 }
chacha20 = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
kzg = { opt-level = 3 }
libm = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
subspace-archiving = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-erasure-coding = { opt-level = 3 }
subspace-farmer-components = { opt-level = 3 }
subspace-kzg = { opt-level = 3 }
subspace-proof-of-space = { opt-level = 3 }
subspace-proof-of-time = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.production]
inherits = "release"
lto = "fat"

# TODO: Remove fork when https://github.com/paritytech/polkadot-sdk/issues/4856 and/or https://github.com/paritytech/litep2p/issues/161
#  are resolved (our fork removes WebRTC support by default in order to avoid OpenSSL dependency)
[patch.crates-io]
litep2p = { git = "https://github.com/subspace/litep2p", rev = "1ea540c6af3ed85a62355a106311740533553677" }
# TODO: Remove once something newer than 0.15.3 is released with support for `NUMBER()` built-in function and used in `fluent-static`
fluent-bundle = { git = "https://github.com/projectfluent/fluent-rs", rev = "bda4736095a4a60a9a042b336d0789c22461905d" }

# Reason: We need to patch substrate dependency of frontier to our fork
# TODO: Remove if/when we are using upstream substrate instead of fork
[patch."https://github.com/paritytech/polkadot-sdk.git"]
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305" }
sp-io = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305" }
sp-runtime-interface = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305" }
staging-xcm = { git = "https://github.com/subspace/polkadot-sdk", rev = "94a1a8143a89bbe9f938c1939ff68abc1519a305" }
